WEBHD-105 Fix and moving btc address overflow css fix

--- a/assets/css/components/_bitcoin-addresses.scss
+++ b/assets/css/components/_bitcoin-addresses.scss
@@ -18,3 +18,6 @@ p.form-control-static.bitcoin-address {
   }
 }
 
+.btcaddr{
+word-break: break-all;
+}
