--- a/assets/css/settings.css.scss
+++ b/assets/css/settings.css.scss
@@ -1,5 +1,6 @@
 #settings {
   padding: 0;
+  
 
   .label{
   font-size: 85%;
@@ -197,6 +198,11 @@
 .setting-result {
   text-align: center;
   padding: 0;
+  
+  p{
+  margin-top: 15px;
+  }
+  
 }
 
 
