--- a/assets/css/utilities/_typography.scss
+++ b/assets/css/utilities/_typography.scss
@@ -4,6 +4,3 @@
 .type-sm {
   font-size: .9em;
 }
-.btcaddr{
-word-break: break-all;
-}
